--- a/UnsplashApp/app/src/main/res/layout/fragment_image_search.xml
+++ b/UnsplashApp/app/src/main/res/layout/fragment_image_search.xml
@@ -17,4 +17,14 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/searchEditText"/>
 
+        <ProgressBar
+            android:id="@+id/loadingIndicator"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="@dimen/loading_indicator_size"
+            android:layout_height="@dimen/loading_indicator_size"
+            android:layout_alignBottom="@id/imagesRecyclerView"
+            android:layout_marginBottom="@dimen/padding_s"
+            android:layout_centerInParent="true"
+            android:visibility="gone"/>
+
 </RelativeLayout>
