--- a/UnsplashApp/app/src/main/res/values/dimens.xml
+++ b/UnsplashApp/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="padding_m">8dp</dimen>
 
     <dimen name="image_thumb_nail_size">150dp</dimen>
+    <dimen name="loading_indicator_size">40dp</dimen>
 </resources>
