--- a/UnsplashApp/app/src/main/res/layout/fragment_image_search.xml
+++ b/UnsplashApp/app/src/main/res/layout/fragment_image_search.xml
@@ -11,6 +11,27 @@
         android:layout_height="wrap_content"
         android:hint="@string/search_field_hint"/>
 
+    <TextView
+        android:id="@+id/infoTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty_search_result"
+        android:layout_below="@id/searchEditText"
+        android:layout_marginTop="@dimen/padding_l"
+        android:layout_centerHorizontal="true"
+        android:textColor="@color/colorAccent"
+        android:visibility="gone"/>
+
+    <ProgressBar
+        android:id="@+id/loadingIndicator"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="@dimen/loading_indicator_size"
+        android:layout_height="@dimen/loading_indicator_size"
+        android:layout_below="@id/searchEditText"
+        android:layout_marginTop="@dimen/padding_l"
+        android:layout_centerHorizontal="true"
+        android:visibility="gone"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/imagesRecyclerView"
         android:layout_width="match_parent"
@@ -18,7 +39,7 @@
         android:layout_below="@id/searchEditText"/>
 
         <ProgressBar
-            android:id="@+id/loadingIndicator"
+            android:id="@+id/loadingBottomIndicator"
             style="?android:attr/progressBarStyle"
             android:layout_width="@dimen/loading_indicator_size"
             android:layout_height="@dimen/loading_indicator_size"
