--- a/UnsplashApp/app/src/main/res/values/dimens.xml
+++ b/UnsplashApp/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="padding_s">4dp</dimen>
     <dimen name="padding_m">8dp</dimen>
+    <dimen name="padding_l">16dp</dimen>
 
     <dimen name="image_thumb_nail_size">150dp</dimen>
     <dimen name="loading_indicator_size">40dp</dimen>
