--- a/UnsplashApp/app/src/main/res/layout/fragment_fullscreen_image.xml
+++ b/UnsplashApp/app/src/main/res/layout/fragment_fullscreen_image.xml
@@ -4,7 +4,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/black"
+    android:clickable="true"
+    android:focusable="true">
 
     <ImageView
         android:id="@+id/fullScreenImageView"
