--- a/UnsplashApp/app/src/main/res/layout/fragment_fullscreen_photo.xml
+++ b/UnsplashApp/app/src/main/res/layout/fragment_fullscreen_photo.xml
@@ -9,7 +9,7 @@
     android:focusable="true">
 
     <ImageView
-        android:id="@+id/fullScreenImageView"
+        android:id="@+id/fullScreenPhotoView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
