--- a/UnsplashApp/app/src/main/res/layout/fragment_photo_search.xml
+++ b/UnsplashApp/app/src/main/res/layout/fragment_photo_search.xml
@@ -35,7 +35,7 @@
         android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/imagesRecyclerView"
+        android:id="@+id/photosRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/searchEditText"/>
@@ -45,7 +45,7 @@
             style="?android:attr/progressBarStyle"
             android:layout_width="@dimen/loading_indicator_size"
             android:layout_height="@dimen/loading_indicator_size"
-            android:layout_alignBottom="@id/imagesRecyclerView"
+            android:layout_alignBottom="@id/photosRecyclerView"
             android:layout_marginBottom="@dimen/padding_s"
             android:layout_centerInParent="true"
             android:visibility="gone"/>
