--- a/UnsplashApp/app/src/main/res/layout/fragment_photo_search.xml
+++ b/UnsplashApp/app/src/main/res/layout/fragment_photo_search.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:hint="@string/search_field_hint"
         android:layout_marginStart="@dimen/padding_m"
-        android:layout_marginEnd="@dimen/padding_m"/>
+        android:layout_marginEnd="@dimen/padding_m"
+        android:textSize="@dimen/search_field_text_size"/>
 
     <TextView
         android:id="@+id/infoTextView"
